force-app/main/default/objects/land_activity__c/land_activity__c.object-meta.xml
<CustomObject>
    <label>land activity</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>land activity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>