force-app/main/default/objects/land_activity__c/fields/Activity_time_of_day__c.field-meta.xml
<CustomField>
    <fullName>Activity_time_of_day__c</fullName>
    <description>Morning (5am-11.59am)
Afternoon (12noon-4.59pm)
Evening (5pm-11pm)
All day (5am-11pm)</description>
    <inlineHelpText>Morning (5am-11.59am)
Afternoon (12noon-4.59pm)
Evening (5pm-11pm)
All day (5am-11pm)</inlineHelpText>
    <label>Activity time of day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>All day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>