force-app/main/default/objects/land_activity__c/fields/Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_Number__c</fullName>
    <formula>itinerary_activity__r.main_tour_activity_day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>