force-app/main/default/objects/land_activity__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>land activity</relationshipLabel>
    <relationshipName>land_activity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>