force-app/main/default/objects/land_activity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>SSO-04  As a BDM I want to be able to add a description text to a land itinerary record so that it can be displayed to the customer</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>