force-app/main/default/objects/land_activity__c/fields/itinerary__c.field-meta.xml
<CustomField>
    <fullName>itinerary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Deal Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.Deal__c</field>
            <operation>equals</operation>
            <valueField>Itinerary__c.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Itinerary__c</referenceTo>
    <relationshipLabel>land activity</relationshipLabel>
    <relationshipName>land_activity</relationshipName>
    <type>Lookup</type>
</CustomField>