force-app/main/default/objects/land_activity__c/fields/itinerary_activity__c.field-meta.xml
<CustomField>
    <fullName>itinerary_activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary Activity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Itinerary Activity Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Itinerary_Activity__c.deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Itinerary_Activity__c</referenceTo>
    <relationshipLabel>land activity</relationshipLabel>
    <relationshipName>land_activity</relationshipName>
    <type>Lookup</type>
</CustomField>