force-app/main/default/objects/land_activity__c/fields/MP_Land_Activity_Tittle__c.field-meta.xml
<CustomField>
    <fullName>MP_Land_Activity_Tittle__c</fullName>
    <formula>TRIM(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( title__c,&apos;Sold Out&apos;, &apos;&apos;),&apos;SOLD OUT&apos;, &apos;&apos;),&apos;Sold out&apos;,&apos;&apos;),&apos;sold out&apos;,&apos;&apos;),&apos;Sold Out&apos;,&apos;&apos;),&apos;OLD&apos;,&apos;&apos;),&apos;Old&apos;,&apos;&apos;),&apos;old&apos;,&apos;&apos;),&apos;NEW&apos;,&apos;&apos;),&apos;New&apos;,&apos;&apos;),&apos;new&apos;,&apos;&apos;))

/*Trim(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( title__c,&apos;Sold Out&apos;, &apos;&apos;),&apos;SOLD OUT&apos;, &apos;&apos;),&apos;Sold out&apos;,&apos;&apos;),&apos;sold out&apos;,&apos;&apos;),&apos;Sold Out&apos;,&apos;&apos;),&apos;OLD&apos;,&apos;&apos;),&apos;Old&apos;,&apos;&apos;),&apos;old&apos;,&apos;&apos;),&apos;NEW&apos;,&apos;&apos;),&apos;New&apos;,&apos;&apos;),&apos;new&apos;,&apos;&apos;),&apos;-&apos;,&apos; &apos;))*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP Land Activity Tittle</label>
    <type>Text</type>
</CustomField>