force-app/main/default/objects/land_activity__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Deal__c</field>
            <operation>equals</operation>
            <valueField>options__c.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>land activity</relationshipLabel>
    <relationshipName>land_activity</relationshipName>
    <type>Lookup</type>
</CustomField>