force-app/main/default/objects/land_activity__c/fields/Site_Order__c.field-meta.xml
<CustomField>
    <fullName>Site_Order__c</fullName>
    <label>Site Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>