force-app/main/default/objects/land_activity__c/fields/Sold_A__c.field-meta.xml
<CustomField>
    <fullName>Sold_A__c</fullName>
    <label>Sold A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>