force-app/main/default/objects/land_activity__c/fields/Sold_B__c.field-meta.xml
<CustomField>
    <fullName>Sold_B__c</fullName>
    <label>Sold B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>