force-app/main/default/objects/land_activity__c/fields/Sold_C__c.field-meta.xml
<CustomField>
    <fullName>Sold_C__c</fullName>
    <label>Sold C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>