force-app/main/default/objects/land_activity__c/fields/solo_price__c.field-meta.xml
<CustomField>
    <fullName>solo_price__c</fullName>
    <label>solo price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>