force-app/main/default/objects/land_activity__c/fields/solo_price_nz__c.field-meta.xml
<CustomField>
    <fullName>solo_price_nz__c</fullName>
    <label>Solo Price - NZD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>