force-app/main/default/objects/land_activity__c/fields/Total_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Sold__c</fullName>
    <formula>Sold__c +  Sold_A__c +  Sold_B__c +  Sold_C__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>