force-app/main/default/objects/land_activity__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <inlineHelpText>This helps how the land activity is displayed on a custom itinerary. If the Land Activity can be connected to a specific Itinerary Day choose &quot;Day Activity&quot; else choose &quot;Upgrade&quot;.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day Activity</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>