force-app/main/default/objects/land_activity__c/fields/UI_Name__c.field-meta.xml
<CustomField>
    <fullName>UI_Name__c</fullName>
    <formula>Name +&apos;-&apos;+TEXT(site__c)+&apos;-&apos;+IF( Active__c , &apos;Active&apos;, &apos;Inactive&apos;)+&apos; | Solo $&apos; + TEXT( solo_price__c )+&apos;-&apos;+&apos;Twin $&apos;+ TEXT(price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UI Name</label>
    <type>Text</type>
</CustomField>