force-app/main/default/objects/land_activity__c/listViews/Kate_Testing.listView-meta.xml
<ListView>
    <fullName>Kate_Testing</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>site__c</columns>
    <columns>Sold__c</columns>
    <columns>Sold_A__c</columns>
    <columns>Sold_B__c</columns>
    <columns>Sold_C__c</columns>
    <filterScope>Everything</filterScope>
    <label>Kate Testing</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>